fix: update CORS configuration for improved security and functionality